--- a/multiapps/package.json
+++ b/multiapps/package.json
@@ -27,6 +27,7 @@
     "@ngrx/store-devtools": "^18.0.2",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "json-server": "^1.0.0-beta.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
